<resources>
    <string name="app_name">Monitoring Trans Jakarta</string>
    <string name="title_activity_main">Monitoring Trans Jakarta</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="enter_transport_id">Enter transport ID</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string name="missing_inputs">Please enter a transport ID, email and password</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="ok">OK</string>
    <string name="enable">Enable</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="confirm_stop">Do you really want to disable location tracking?</string>

    <string name="firebase_path" translatable="false">bus-locations/</string>
    <string name="prefs" translatable="false">prefs</string>
    <string name="transport_id" translatable="false">transport_id</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="iklan00006_wmf">Iklan00006.wmf</string>

    <string name="preference_file_key">TRANSJAKARTA_MONITORING_APP</string>
    <string name="iklan_status">STATUS: %1s</string>

    <string name="status_ok">&#x2713;</string>
    <string name="status_not_ok">&#x2718;</string>
    <string name="max_speed_text">MAX %1s KM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_module">Open Module</string>
    <string name="close_module">Close Module</string>
    <string name="get_card_id">Get CardID</string>
    <string name="get_version">Get Version</string>
    <string name="request">Request</string>
    <string name="set_auto_seek_time">Set Auto Seek Time</string>
    <string name="resume_auto_seek_time">Resume Auto Seek Time</string>
    <string name="get_seralbaudrate">Get Seralbaudrate</string>
    <string name="select">Select</string>
    <string name="anticoll">Anticoll</string>
    <string name="reset">Reset</string>
    <string name="authentication">Authentication</string>
    <string name="input_section">Input Section</string>
    <string name="input_key">Input Key</string>
    <string name="read_block">Read Block</string>
    <string name="write_block">Write Block</string>
    <string name="block_number">Block Number</string>
    <string name="data">Data</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="voice_over_detikan_text">PA System Berakhir dalam %1$d detik</string>


    <string name="ic_frame_id"> frame number:% s </string>
    <string name="ic_communication_id"> Communication ID:% s </string>
    <string name="ic_user_characteristic"> User characteristics:% s </string>
    <string name="ic_frequency"> Service frequency:% s </string>
    <string name="ic_level"> Communication level:% s </string>
    <string name="ic_encryption_flag"> Encryption flag:% s </string>
    <string name="ic_users"> Total users:% s </string>
    <string name="ic_addrsss"> Local address:% s </string>
    <string name="ic_status"> IC card status:% s </string>
    <string name="ic_hardware_status"> Hardware status:% s </string>
    <string name="ic_power1"> 1 # Signal power:% s </string>
    <string name="ic_power2"> 2 # Signal power:% s </string>
    <string name="ic_power3"> 3 # Signal power:% s </string>
    <string name="ic_power4"> 4 # Signal power:% s </string>
    <string name="ic_power5"> 5 # Signal power:% s </string>
    <string name="ic_power6"> 6 # Signal power:% s </string>
    <string name="ic_time_year"> year:% s </string>
    <string name="ic_time_month"> month:% s </string>
    <string name="ic_time_day"> day:% s </string>
    <string name="ic_time_hour"> Hours:% s </string>
    <string name="ic_time_minute"> minutes:% s </string>
    <string name="ic_time_sec"> Seconds:% s </string>
    <string name="txxx_src_address"> Sender user address:% s </string>
    <string name="txxx_type"> Communication category:% s </string>
    <string name="txxx_hour"> When:% s </string>
    <string name="txxx_minute"> min:% s </string>
    <string name="txxx_content"> Content:% s </string>
    <string name="txxx_crc"> CRC flag:% s </string>
    <string name="zjxx_ic_status"> IC card status:% s </string>
    <string name="zjxx_hardware_status"> Hardware status:% s </string>
    <string name="zjxx_battery"> Battery:% s </string>
    <string name="zjxx_inbound_status"> Inbound status:% s </string>
    <string name="zjxx_power1"> 1 # Signal power:% s </string>
    <string name="zjxx_power2"> 2 # Signal power:% s </string>
    <string name="zjxx_power3"> 3 # signal power:% s </string>
    <string name="zjxx_power4"> 4 # Signal power:% s </string>
    <string name="zjxx_power5"> 5 # Signal power:% s </string>
    <string name="zjxx_power6"> 6 # Signal power:% s </string>
    <string name="txxx_feedback_code"> Feedback code:% s </string>
    <string name="txxx_feedback_infor"> Feedback:% s </string>
    <string name="txxx_send_frequency"> Emission frequency:% s </string>
    <string name="txxx_current_time"> Wait time:% s </string>
    <string name="txxx_battery"> Remaining battery power:% s </string>
    <string name="txxx_send_number"> Number of Sends:% s </string>
    <string name="txxx_successful_rate"> Success rate:% .4s </string>
    <string name="txxx_response_number"> Number of responses:% s </string>
    <string name="txxx_feedback_number"> Number of feedbacks:% s </string>
    <string name="Communications_applications"> Communication Applications </string>
    <string name="Auto_Send"> Auto Send </string>
    <string name="please_scan">Please Scan....</string>
    <string name="start"> Start </string>
    <string name="stop"> Stop </string>
    <string name="please_scanning">Please Scanning</string>
    <string name="please_input">Please Enter</string>
    <string name="no_data"> No data! </string>
</resources>
